%% Mermaid class diagram reflecting current entities
classDiagram
    class Employe {
      +Long id
      +String nom
      +String prenom
      +String cin
      +String poste
      +String service
      +LocalDate dateEmbauche
      +String cnssNumero
      +Double salaire
      +String compteBancaireNumero
      +String sexe
    }

    class Attestation {
      +Long id
      +Long employeId
      +String typeAttestation
      +LocalDateTime dateGeneration
      +String cheminFichier
    }

    class AttestationTemplate {
      +Long id
      +String name
      +String jrxml
      +LocalDateTime updatedAt
    }

    class Hr {
      +Long id
      +String username
      +String password
      +boolean isApproved
      +String fullName
      +String email
      +String phone
      +String position
      +String department
      +Boolean darkTheme
    }

    class Parametre {
      +Long id
      +String type
      +String value
      +String label
    }

    %% Conceptual relationships
    Employe <.. Attestation : employeId
    AttestationTemplate ..> Attestation : generates
    Hr ..> Attestation : triggers
    Parametre ..> Employe : options/labels

